--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 <link rel="stylesheet" href="style.css"
 head>
 <body>
-
     <div id="hero">
         <div class="navbar">
             <img src="img_1704535896956.png" class="logo">
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./services.html">Services</a></li>
+                    <li><a href="./About Us.html">About Us</a></li>
+                    <li><a href="./Contact Us.html">Contact US</a></li>
+                </ul>
             <div class="user">
                 <button type="button">Explore</button>
                 <img src="1704533594694.png">
@@ -33,7 +38,6 @@ head>
             <img src="right-arrow.png" id="next">
 
         </div>
-
     </div>
     <script>
         var prev = document.getElementById("prev");
@@ -69,10 +73,6 @@ head>
         
 
     </script>
-   
-
-
-
 
 </body>
 </html>
