--- a/Contact Us.html
+++ b/Contact Us.html
@@ -16,7 +16,7 @@
             <input type="text" name="name" placeholder="Your name" class="contact-inputs" required>
             <input type="email" name="email" placeholder="Your email" class="contact-inputs" required>
             <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
-            <button type="submit">Submit <img src="/Elmsella school copy/right-arrow.png" alt=""></button>
+            <button type="submit">Submit <img src="messages.png" alt=""></button>
         </form>
         <div class="contact-right">
             <img src="messages.png" alt="">
