--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ head>
                     <li><a href="./About Us.html">About Us</a></li>
                     <li><a href="./Contact Us.html">Contact US</a></li>
                 </ul>
-                <h1>Rat<span>tra</span>page</h1>
+                <h1>Nat<span>tio</span>nal</h1>
                 <div class="launch-time">
                     <div>
                         <p id="Days">00</p>
@@ -88,7 +88,7 @@ head>
             }
             
         }
-        var countDownDate = new Date("july 10, 2024 08:00:00").getTime();
+        var countDownDate = new Date("june 29, 2025 08:00:00").getTime();
     var x = setInterval(function(){
         var now = new Date().getTime();
         var distance = countDownDate - now;
