--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ head>
                     <li><a href="./About Us.html">About Us</a></li>
                     <li><a href="./Contact Us.html">Contact US</a></li>
                 </ul>
-                <h1>Nat<span>tio</span>nal</h1>
+                <h1>Na<span>tio</span>nal</h1>
                 <div class="launch-time">
                     <div>
                         <p id="Days">00</p>
